ASPNetMicroserviceTemplate/k8s/olds/testService02-deploy.yaml
# Тестовый сервис 2 - Спецификация
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robohash
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robohash
  template:
    metadata:
      labels:  
        app: robohash
    spec:
      containers:
      - name: robohash-container
        image: wdenniss/robohash:3
        ports:  
        - containerPort: 8082 
        # resources:
        #   requests:
        #     memory: "128Mi" # Минимально необходимая память в мебибайтах 
        #     cpu: "128m"     # Минимально необходимый CPU в миллиярдных долях (250m = 25% ядра)
        #   # Лимиты, которые могут быть выделены контейнеру
        #   limits:
        #     memory: "128Mi"   # Максимально допустимая память в мебибайтах 
        #     cpu: "128m"       # Максимально допустимый CPU
# ---
# # Тестовый сервис 2 - NodePort
# apiVersion: v1
# kind: Service
# metadata:
#   name: robohash-np
#   namespace: default
# spec:
#   selector:
#     app: robohash
#   ports:
#   - port: 8082
#     targetPort: 8082
#     protocol: TCP
#   type: NodePort
---
# Тестовый сервис 2 - ClusterIP
# - сервис достпен только внутри кластера
apiVersion: v1
kind: Service
metadata:
  name: robohash-cip
  namespace: default
spec:
  selector:
    app: robohash
  ports:
  - protocol: TCP
    # Порт, на котором сервис будет доступен внутри кластера
    port: 8082
    # Порт, на который будет перенаправлен трафик внутри пода
    targetPort: 8082
  type: ClusterIP
