ASPNetMicroserviceTemplate/k8s/olds/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    # : /
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    # Добавляется ссылка на ранее созданный ClusterIssuer
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: repack.pw
    http:
      paths:
      - path: /api/.*
        pathType: Prefix
        backend:
          service:
            name: testservice01-ip
            port:
              number: 8081
      # - path: /example
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: robohash-cip
      #       port:
      #         number: 8082
  # секция для сертификации
  tls:
  - hosts:
    # домены, для которых cert-manager должен выпустить сертификаты
    - repack.pw
    # секрет, где они будут храниться сертификаты.
    secretName: ingress-tls
